--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,7 +155,7 @@ input, textarea {
 
 html { font-family: var(--ff-poppins); }
 
-body { background: #e3ceac; }
+body { background: #d8ba8a; }
 
 
 
